--- a/now.json
+++ b/now.json
@@ -1,3 +1,5 @@
 {
-  "version": 1
+  "version": 2,
+  "builds": [{ "src": "index.js", "use": "@now/node-server" }],
+  "routes": [{ "src": "/.*", "dest": "index.js" }]
 }
